# transport-network-performance

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CONTRIBUTING.md  LICENSE  LICENSE.note  MANIFEST.in  README.md  conftest.py  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: code_review_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: all-os-tests.yml  integration-tests.yml  macos-integration.yml  python-package-linux.yml  python-package-mac.yml  python-package-windows.yml  python-package.yml  sphinx-render.yml  windows-build.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/explanation/: index.rst.txt
_sources/how_to/: index.rst.txt
_sources/reference/: index.rst.txt
_sources/tutorials/: index.rst.txt
data/: README.md
docs/: README.md
docs/gtfs/: Gtfs_Instance_class_diagram.md
docs/source/: conf.py  index.rst
explanation/: index.html
how_to/: index.html
notebooks/: outliers.py
notebooks/analyse_network/: analyse_network_timed.py
notebooks/e2e/: e2e.py  e2e_leeds.py  e2e_london.py  e2e_marseille.py  e2e_newport.py
notebooks/gtfs/: check_unmatched_id_warnings.py  stop_id_check.py
notebooks/metrics/: metrics_experiments.py
notebooks/osm/: 01-visualise-osm.py
notebooks/population/: grid_pop_experiment.py
notebooks/urban_centres/: buffer_experiments.py  explore_uc_buffer.py  poc_urban_centres.py  urban_centre_funcs.py
pipeline/gtfs/: 01-validate-gtfs.py
pipeline/osm/: 01-validate-osm.py
reference/: coverage.html  index.html
reference/_autosummary/: transport_performance.gtfs.calendar.create_calendar_from_dates.html  transport_performance.gtfs.calendar.html  transport_performance.gtfs.cleaners.clean_consecutive_stop_fast_travel_warnings.html  transport_performance.gtfs.cleaners.clean_multiple_stop_fast_travel_warnings.html  transport_performance.gtfs.cleaners.drop_trips.html  transport_performance.gtfs.cleaners.html  transport_performance.gtfs.gtfs_utils.bbox_filter_gtfs.html  transport_performance.gtfs.gtfs_utils.convert_pandas_to_plotly.html  transport_performance.gtfs.gtfs_utils.filter_gtfs.html  transport_performance.gtfs.gtfs_utils.filter_gtfs_around_trip.html  transport_performance.gtfs.gtfs_utils.html  (+26 more)
scripts/: prep-centroid-fixture.py  prep-fixtures.py  prep-metrics-fixtures.py
tests/: test_analyse_network.py  test_integration.py  test_metrics.py  test_setup.py
tutorials/: index.html
(+142 files in other folders)
