[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==65.6.3", "wheel"]

[project]
name = "transport_performance"
authors = [
    {name = "Data Science Campus", email = "datasciencecampus@ons.gov.uk"}
]
description = "Measuring the performance of transport networks around urban centres"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = "==3.11.0"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/datasciencecampus/transport-network-performance"
"Bug tracker" = "https://github.com/datasciencecampus/transport-network-performance/issues"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
